Sat Jul 24 07:04:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.idl:
          Added.

Fri Jul 23 17:41:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:

          Add in the Hello SHS test.

Fri Jul 23 17:37:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/LocalityManager/ExplicitExec:
        * DAnCE/tests/LocalityManager/ExplicitExec/Deployment.cdp:
        * DAnCE/tests/LocalityManager/ExplicitExec/ExplicitExec.mpc:
        * bin/ciao_tests.lst

          Test for explicitly using a locality executable name other than
          dance_locality_manager.

Fri Jul 23 16:06:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Bugfixes.

        * DAnCE/tests/LocalityManager/ProcessName:
        * DAnCE/tests/LocalityManager/ProcessName/Deployment.cdp:
        * DAnCE/tests/LocalityManager/ProcessName/run_test.pl:

          Test for process name changing.

        * bin/ciao_tests.lst:

          Added tests to daily build.

Fri Jul 23 15:05:19 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:

          Compile fixes.

Fri Jul 23 14:26:53 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_LocalityManager.idl:

          Added local interface for configuration plugins.

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Added logic to invoke configuration plugins if present.

        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.h:
        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:

          Loading logic for configuration plugins.

        * DAnCE/LocalityManager/Configuration:
        * DAnCE/LocalityManager/Configuration/Configuration.mpc: